# continuuai

./: .env.example  .gitignore  AI-PC-comparison-2025-12-14.html  ContinuuAI: From Chat to Decision Continuity.md  DEPLOYMENT.md  DOCS_REORGANIZATION.md  Fear-and-Change-Discussion-2025-12-16.html  GITLAB_SETUP.md  Goal.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE1_COMPLETE.md  PHASE2_3_FRONTEND_GUIDE.md  PHASES_2_3_COMPLETE.md  README.md  STEPS_TO_DEPLOY.md  User App Feature Complete Implementation.md  User_Stories.md  continuuai-llm.service  continuuai.service  docker-compose.yml  install.sh  setup-gitlab.sh  sql.md  test_api.sh
docs/: INDEX.md  README.md
landing_page_needs_repurposing/: Implementation_plan.md  README.md  index.html  styles.css
landing_page_needs_repurposing/backend/: .dockerignore  Cargo.toml  DEPLOYMENT.md  DEPLOY_AWS.md  Dockerfile  README.md  deploy-aws.sh  fly.toml  package.json
landing_page_needs_repurposing/backend/src/: files.rs  git.rs  main.rs  server.js  terminal.rs
landing_page_needs_repurposing/backend/src/__tests__/: api.test.js
landing_page_needs_repurposing/backend/src/middleware/: error.js  rateLimiter.js
landing_page_needs_repurposing/backend/src/routes/: auth.js  calendar.js  sessions.js
landing_page_needs_repurposing/backend/src/services/: containerManager.js
migrations/: 0000_enable_pgvector.sql  0001_init.sql  0002_event_log_and_graph.sql  0003_edge_evidence.sql  0004_evidence_embedding.sql  0005_extend_graph.sql  0006_enable_pgvector.sql  0007_span_node.sql  0008_evidence_span_if_missing.sql  0010_principal_role.sql  (+3 more)
(+128 files in other folders)
