[package]
name = "ide-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# HTTP
hyper = { version = "1.0", features = ["full"] }

# Futures utilities
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }

# File watching
notify = "6.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path utilities
walkdir = "2.4"

# Terminal (PTY)
portable-pty = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
